# vello

./: .env.example  .gitignore  Anchor.toml  README.md  SETUP_GUIDE.md  build-and-deploy.ps1  csol-config.json  nixpacks.toml  package-lock.json  package.json  tsconfig.json
circuits/: merkleTree.circom  package-lock.json  package.json  poseidon.circom  velo_withdraw.circom
circuits/lib/: merkle.circom  poseidon.circom
circuits/mixer/: withdraw.circom
circuits/scripts/: prove.js  setup.js  test-proof.js
programs/: Anchor.toml  Cargo.toml
programs/velo/: Cargo.toml
programs/velo/src/: lib.rs
programs/velo_mixer/: Cargo.toml
programs/velo_mixer/src/: lib.rs
programs/velo_private_tx/: Cargo.toml
programs/velo_private_tx/src/: lib.rs
programs/velo_stealth/: Cargo.toml
programs/velo_stealth/src/: lib.rs
programs/velo_subscription/: Cargo.toml
programs/velo_subscription/src/: lib.rs
relayer/: env.template  package-lock.json  package.json  railway.json
relayer/src/: index.ts  types.ts  validators.ts
relayer/src/services/: mixer.ts  privateTx.ts  stealth.ts
relayer/src/utils/: logger.ts
scripts/: build-velo.sh  check-pools.ts  deploy-velo.sh  deploy.ps1  deploy.sh  init-confidential-mint.ts  init-csol-mint.ts  init-mixer.ts  init-pools.ts  init-velo-pools.ts  register-relayer.ts  upload-idl.ts
scripts/wsl-build/: build-final.sh  build-wsl-basic.sh  build-wsl-basic2.sh  build-wsl-minimal.sh  build-wsl-v10.sh  build-wsl-v2.sh  build-wsl-v28.sh  build-wsl-v3.sh  build-wsl-v4.sh  build-wsl-v5.sh  build-wsl-v6.sh  build-wsl-v7.sh  build-wsl-v8.sh  build-wsl-v9.sh  build-wsl.sh  rebuild-with-correct-id.sh  wsl-build-direct.sh  wsl-build.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/login/: route.ts
src/app/api/auth/logout/: route.ts
src/app/api/auth/me/: route.ts
src/app/api/auth/signup/: route.ts
src/app/api/confidential/account/: route.ts
src/app/api/confidential/balance/: route.ts
src/app/api/stats/: route.ts
src/app/api/transfers/: route.ts
src/app/app/: page.tsx
src/app/home/: page.tsx
src/app/login/: page.tsx
src/app/signup/: page.tsx
src/components/: confidential-panel.tsx  pending-transfers-panel.tsx  providers.tsx  wallet-provider.tsx
src/components/ui/: secure-message-gateway.tsx  terminal-bento-grid.tsx  velo-dashboard.tsx  velo-terminal.tsx
src/hooks/: useVeloPrivacy.ts  useVeloWallet.ts
src/lib/: db.ts
src/lib/confidential/: account-service.ts  constants.ts  csol-mint.ts  elgamal.ts  index.ts  transfer-service.ts  types.ts
src/lib/db/: velo-db.ts
src/lib/solana/: confidential-token.ts  confidential.ts  config.ts  decoy-service.ts  index.ts  light-protocol.ts  mixer-program.ts  mixer.ts  stealth-v2.ts  stealth.ts  subscription.ts  velo-program.ts  wallet.ts  zk-prover.ts
src/lib/solana/programs/: index.ts
src/lib/velo/: amount-splitter.ts  relayer-client.ts  types.ts  velo-service.ts
src/lib/zk/: prover.ts
src/models/: Transfer.ts  User.ts
(+2 files in other folders)
