[package]
name = "velo"
version = "0.1.0"
description = "Velo Privacy Protocol - ZK-powered private transactions on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "velo"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"

[profile.release]
overflow-checks = true
