[package]
name = "velo_mixer"
version = "0.1.0"
description = "Velo Privacy Protocol - Mixing Pool with Poseidon Merkle Tree"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "velo_mixer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
solana-program = "1.18.0"
light-poseidon = "0.1.1"
ark-bn254 = "0.4.0"
ark-ff = "0.4.0"
groth16-solana = "0.0.3"
