[package]
name = "velo_mixer"
version = "0.1.0"
description = "Velo Privacy Protocol - Mixing Pool with Poseidon Merkle Tree"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "velo_mixer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
