[package]
name = "velo_mixer"
version = "0.1.0"
description = "Velo Privacy Mixer - SOL mixing for transaction privacy"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "velo_mixer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
