[package]
name = "velo_private_tx"
version = "0.1.0"
description = "Velo Privacy Protocol - ZK-Verified Private Transfers"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "velo_private_tx"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
