[package]
name = "velo_stealth"
version = "0.1.0"
description = "Velo Privacy Protocol - Stealth Address Registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "velo_stealth"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
